Day-36-Ingress-Mastery/search-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: search-service
spec:
  type: ClusterIP
  selector:
    app: search 
  ports:
    - port: 80
      targetPort: 8080
