Day-36-Ingress-Mastery/ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "5"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - my-app.local
    secretName: app-tls-cert
  rules:
  - host: my-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-api-service
            port:
              number: 80
      - path: /search
        pathType: Prefix
        backend:
          service:
            name: search-service
            port:
              number: 80
